--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "aws-sdk": "^2.3.4",
     "jQuery": "^1.7.4",
+    "phpjs": "^1.3.2",
     "superagent": "^1.8.3"
   }
 }
